# mrs_vins_kickoff_estimator_plugin

./: CMakeLists.txt  README.md  estimator_plugins.xml  package.xml
include/: vins_kickoff_estimator_plugin.h
src/: vins_kickoff_estimator_plugin.cpp
tmux/realworld/bluefox_front/: record.sh  tmux.sh
tmux/realworld/bluefox_front/config/: custom_config.yaml  world_config.yaml
tmux/realworld/bluefox_front/config/bluefox_imu/: estimator_config.yaml  kalibr_imu_chain.yaml
tmux/simulation/: session.yml
tmux/simulation/custom_configs/: mrs_uav_managers.yaml
